# numbers_bot

./: .env.example  .gitignore  AI_TROUBLESHOOTING.md  Dockerfile  HIGH_PERFORMANCE.md  LOGIC_ONLY.md  MESSAGE_SYSTEM.md  Makefile  PERFORMANCE_OPTIMIZATION.md  PHASE_1_IMPLEMENTATION.md  PHASE_2_IMPLEMENTATION.md  PHASE_3_IMPLEMENTATION.md  QUICK_START_TESTING.md  README-improvement-notes.md  README.md  REFACTORING_GUIDE.md  __init__.py  api.py  apply_step1_2_flat.py  bot.py  config.py  final_integration_test.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run_api.sh  server.js  settings.py  test_ai_analyzer_compatibility.py  test_ai_integration_simple.py  test_all_flows_keyboards.py  test_all_updated_flows.py  test_bridges_flow_ai_integration.py  test_data_validator_compatibility.py  test_extended_flow_keyboard.py  test_keyboard_integration.py  test_keyboards_compatibility.py  test_keyboards_simple.py  (+2 more)
ai/: __init__.py  analysis.py  engine.py  prompts.py  system_prompts.py
calc/: __init__.py  mapping.py  profile.py
flows/: __init__.py  base.py  bridges_flow.py  calendar_flow.py  cycles_flow.py  days_flow.py  extended_flow.py  months_flow.py  partner_flow.py  profile_flow.py  profile_flow_refactored.py
handlers/: __init__.py  base.py  bridges.py  calendar_flow.py  core_profile.py  cycles.py  days.py  extended.py  months.py  partner.py  states.py
helpers/: __init__.py  ai_analyzer.py  async_util.py  background_tasks.py  concurrency.py  data_validator.py  dates.py  error_handler.py  http_pool.py  keyboards.py  memory_manager.py  (+6 more)
(+129 files in other folders)
