[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numbers-core"
version = "0.1.0"
description = "Pure Python numerology calculations with optional AI analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Numbers Core" }]
dependencies = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "C90", "N", "ASYNC", "RUF"]
ignore = ["E203"]
